--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
   <title>Calendario</title>
 </head>
 
 <body>
   <h1>Calendario JS</h1>
-  <script src="./index.js"></script>
+
+  <div class="container">
+    <nav>
+      <button id="mostrar">Mostrar calendario</button>
+      <button id="agregar">Agregar tarea</button>
+      <button id="buscar">Buscar actividades por mes</button>
+      <button id="eliminar">Eliminar una actividad</button>
+    </nav>
+    <div id="pantalla">
+    </div>
+  </div>
+  <script src="./index.js" type="module"></script>
 </body>
 
 </html>
