fetch para feriados

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-  <title>Calendario</title>
+  <title>Calendarix</title>
 </head>
 
 <body>
   <main>
-    <h1>Calendario JS</h1>
+    <h1>Calendarix</h1>
 
     <div class="container">
       <nav>
